--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Giomar Silva - Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+    <header>
+      <ul>
+        <li class="header-list">Giomar</li>
+        <li class="header-list">Silva</li>
+      </ul>
+    </header>
+    <div class="circles">
+      <div id= "cir1"></div>
+      <div id= "cir2"></div>
+      <div id= "cir3"></div>
+      <div id= "cir4"></div>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+
+    <footer>
+        <h4><a href="#">Cool stuff I like</a></h4>
+  </body>
+</html>
