suggested position changes

--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <header>
-      <ul>
-        <li class="header-list">Giomar</li>
-        <li class="header-list">Silva</li>
-      </ul>
-    </header>
+    <!-- Put .circles first in html - Taylor -->
     <div class="circles">
       <div id= "cir1"></div>
       <div id= "cir2"></div>
       <div id= "cir3"></div>
       <div id= "cir4"></div>
     </div>
+    <header>
+      <ul>
+        <li class="header-list">Giomar</li>
+        <li class="header-list">Silva</li>
+      </ul>
+    </header>
     <nav>
       <ul>
         <li><a href="#">About</a></li>
