We're getting there

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
       <div id= "cir4"></div>
     </div>
     <header>
-      <ul>
+      <h1>Gio</br>
+      Silva</h1>
+      <!-- <ul>
         <li class="header-list">Giomar</li>
         <li class="header-list">Silva</li>
-      </ul>
+      </ul> -->
     </header>
     <nav>
       <ul>
