--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       <div id= "cir3"></div>
       <div id= "cir4"></div>
     </div>
+    <!--ND: you don't really need to make a header if you're only going to have one element in it.
+  -->
     <header>
+      <!--ND:Why'd you use the break tag here? Coulda used two separate ones  -->
       <h1>Gio</br>
       Silva</h1>
       <!-- <ul>
@@ -30,6 +33,8 @@
     </nav>
 
     <footer>
+      <!--ND: the heading elements are intended to denote sections more so than font sizing.
+    check out this article to learn more -->
         <h4><a href="#">Cool stuff I like</a></h4>
   </body>
 </html>
